--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<p>大家好，我是熊金，这是我和我女朋友的网站</p>
+<p>Hello 大家好</p >
+<p>我是熊金，这是我和我女朋友的网站。 </p >
+<p>很高兴你来到这里, 你可以在以下的网站找到我</p >
+
+<ul>
+  <li> < a href="https://user.qzone.qq.com/773864756/ ">QQ空间</ a> </li>
+  <li> < a href="">我的微博</ a> </li>
+</ul>
